[package]
name = "redismodule"
version = "0.1.0"
authors = ["win <742362144@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "helloworld-server"
#path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/bin/client.rs"

[lib]
name = "module"
crate-type = ["cdylib"]
required-features = ["experimental-api"]


[dependencies]
tonic = { version = "0.1.0", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
#futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"
# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tracing
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.6"
# Hyper example
hyper = "0.13"
warp = { version = "0.2", default-features = false }
http = "0.2"
http-body = "0.3"
pin-project = "0.4.17"
# Health example
tonic-health = { version = "0.2.0" }
listenfd = "0.3"

async-task = "1.3.0"
crossbeam = "0.7.3"
futures = "0.3.1"
num_cpus = "1.12.0"
once_cell = "1.3.1"

byteorder = "1"
hashbrown = "0.1.8"
libc = "0.2.43"
libloading = "0.3"
spin = "0.4.7"
x86 = "0.34.0"
time = "0.2.23"
rand = "0.8.1"
redis-module = "0.11.0"
log = "0.4.8"



[build-dependencies]
tonic-build = { version = "0.3.1", features = ["prost"] }
